--- a/scss/layout/_nav.scss
+++ b/scss/layout/_nav.scss
@@ -9,7 +9,7 @@
   align-items: center;
   position: relative;
   margin: 2px;
-  z-index: 200;
+  z-index: 300;
   @include boxBorder;
   .title {
     padding-left: 16px;
@@ -110,7 +110,7 @@
                 height: 100%;
                 cursor: pointer;
               }
-              input[type="file"] {
+              input[type='file'] {
                 display: none;
               }
             }
